--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,14 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li routerLinkActive="active"><a routerLink="auth">Authentificaion</a></li>
+      <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes Appareils</h2>
-
-      <p>Mis à jour le : {{ lastUpdate | async | date: 'EEEE d MMMM y' | uppercase }}</p>
-
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils; let i = index"
-                      [indexOfAppareil]="i"
-                      [appareilName]="appareil.name"
-                      [appareilStatus]="appareil.status"></app-appareil>
-      </ul>
-      <button class="btn btn-success"
-              (click)="onAllumer()">Tout allumer</button>
-      <button class="btn btn-danger"
-              (click)="onEteindre()">Tout éteindre</button>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
