--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -14,4 +14,8 @@
           (click)="onAllumer()">Tout allumer</button>
   <button class="btn btn-danger"
           (click)="onEteindre()">Tout éteindre</button>
+  <button class="btn btn-primary"
+          (click)="onSave()">Enregistrer</button>
+  <button class="btn btn-default"
+          (click)="onFetch()">Charger les appareils</button>
 </div>
